syntax = "proto3";

package chat_v1;

import "validate/validate.proto";

option go_package = "github.com/Arkosh744/auth-grpc/pkg/chat_v1;chat_v1";

service ChatV1  {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse) {}
}

message CreateChatRequest {
  repeated string usernames = 1 [(validate.rules).repeated.items.string.min_len = 1,
    (validate.rules).repeated.items.string.max_len = 32,
    (validate.rules).repeated.unique = true];
}

message CreateChatResponse {
  string chat_id = 1;
}
